--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,7 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+Flask==3.0.0
+Flask-CORS==4.0.0
 pymongo==4.6.0
 pydantic==2.5.0
 python-dotenv==1.0.0
-python-multipart==0.0.6
 email-validator==2.1.0
 dnspython==2.4.2
